// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Select options content 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="sc-WywnD jVDWmQ"
    >
      Large
    </span>
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-16-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-16-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-16-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-16-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-17-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-13urifb-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        >
          xLarge
        </div>
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-17-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-17-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-17-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi Select options wrapper width 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="sc-WywnD jVDWmQ"
    >
      Large
    </span>
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-14-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-14-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-14-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-14-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-15-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-13urifb-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        >
          Single xLarge
        </div>
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-15-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-15-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-15-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi Select renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1qio7j2-container"
    onKeyDown={[Function]}
  >
    <span
      className="sc-WywnD jVDWmQ"
    >
      Large
    </span>
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-8-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-8-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-8-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={true}
            id="react-select-8-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1qio7j2-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-9-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-13urifb-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        >
          xLarge
        </div>
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-9-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-9-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={true}
            id="react-select-9-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi Select renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="flex flex-col"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="sc-WywnD jVDWmQ"
      >
        Large
      </span>
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1cqwbe7-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1jfgnnv-ValueContainer"
        >
          <div
            className="sc-dwOrSJ llvMJU"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-10-placeholder"
            >
              <div
                className="sc-iiHhKi gBfpKQ"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-10-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-10-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gsnTZi"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      className="sc-jPzPiz dJAuCB"
    >
      Informative message holder
    </span>
  </div>
  <div
    className="flex flex-col"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-11-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-5vimdk-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-hSGqtg fLCcvx"
          >
            xLarge
          </div>
          <div
            className="sc-dwOrSJ llvMJU"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-11-placeholder"
            >
              <div
                className="sc-iiHhKi gBfpKQ"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-11-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-11-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gsnTZi"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      className="sc-jPzPiz dJAuCB"
    >
      Informative message holder
    </span>
  </div>
</div>
`;

exports[`Multi Select renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="flex-flex-col"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="sc-WywnD jVDWmQ"
      >
        Large
      </span>
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-dijs1s-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1jfgnnv-ValueContainer"
        >
          <div
            className="sc-dwOrSJ llvMJU"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-6-placeholder"
            >
              <div
                className="sc-iiHhKi gBfpKQ"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-6-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gsnTZi"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      className="sc-jPzPiz bcAkBx"
    >
      Informative message holder
    </span>
  </div>
  <div
    className="flex-flex-col"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-fcxntf-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-hSGqtg fLCcvx"
          >
            Single xLarge
          </div>
          <div
            className="sc-dwOrSJ llvMJU"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-7-placeholder"
            >
              <div
                className="sc-iiHhKi gBfpKQ"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-7-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gsnTZi"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      className="sc-jPzPiz bcAkBx"
    >
      Informative message holder
    </span>
  </div>
</div>
`;

exports[`Multi Select renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="sc-WywnD jVDWmQ"
    >
      Large
    </span>
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-2-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-2-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-2-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-13urifb-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        >
          Single xLarge
        </div>
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-3-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-3-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-3-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi Select renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-4-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-4-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-4-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-5-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        />
        <div
          className="sc-dwOrSJ llvMJU"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-5-placeholder"
          >
            <div
              className="sc-iiHhKi skhvf"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-5-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-5-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi Select with counter 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="sc-WywnD jVDWmQ"
    >
      Large
    </span>
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-12-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-dijs1s-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-1jfgnnv-ValueContainer"
      >
        <div
          className="sc-dwOrSJ kYmEql"
        >
          <div
            className=" css-1rtvqhl-placeholder"
            id="react-select-12-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-12-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-12-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className=" css-1tsy5a7-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-13-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-fcxntf-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-13urifb-ValueContainer"
      >
        <div
          className="sc-hSGqtg fLCcvx"
        >
          xLarge
        </div>
        <div
          className="sc-dwOrSJ kYmEql"
        >
          <div
            className=" css-elkbxv-placeholder"
            id="react-select-13-placeholder"
          >
            <div
              className="sc-iiHhKi gBfpKQ"
            >
              Choose an option
            </div>
          </div>
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-13-placeholder"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-13-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="sc-gsnTZi"
          fill="none"
          fontSize="1.5rem"
          height="1em"
          style={
            Object {
              "marginInlineEnd": "0.5rem",
            }
          }
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 11.5l-9 9-9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
